# django_comais

./: .env.dev  .env.prod  .gitignore  RESUMO_BASE64_IMPLEMENTADO.md  UV_USAGE.md  backup.sql  comais_site  dados.json  data.json  datadump.json  db.json  db.sqlite3  db.sqlite3-06-10  db.sqlite34  db.sqlite3_bk  db.sqlite3_bk1  db1.json  db_backup.sqlite3  dump.json  export_data.py  manage.py  my_fixtures.json  pyproject.toml  requeriments.txt  requeriments_win.txt  requirements.txt  test_base64_integration.py  test_pdf_conversion.md  test_pdf_with_images.md
.agent/rules/: GEMINI.md
.qodo/: history.sqlite
analisededados/: GUIA_PALETAS.md  OPCOES_DESIGN.md  PALETAS_DESIGN.md  anomalia.html  associacao.html  comparacao.html  correlacao.html  fundamentos.html  index.html  index_opcao1_glassmorphism.html  index_opcao2_floating_cards.html  index_paleta1_sofisticada.html  index_paleta2_warm.html  index_paleta3_minimalista.html  regressao.html
analisededados/datasets/: abastecimento.csv  avenida_dos_crimes.csv  crimes_oportunidade_serial.csv  furto_veiculos.csv  lavagem_dinheiro.csv
comais/: asgi.py  setting.py  settings.py  settings.pyes  urls.py  wsgi.py
media/docs/: 1-agosto-Formação em recursos humanos na área de .docx  1-fevereiro-Central QualiTOPAMA - Qualificação das A.docx  1-janeiro-FORMAÇÃO DE RECURSOS HUMANOS NA ÁREA DE .docx  1-junho-MODELAGEM COMPUTACIONAL DO MINISTÉRIO DA.docx  1-maio-Governaça Digital no Ministério da Saúde.docx  1-março-GOVERNANÇA DIGITAL NO MINISTÉRIO DA SAÚD.docx  1-março-Governança Digital e Modelagem Computaci.docx  1-setembro-teste.docx  10-dezembro-Central QualiTOPAMA - Qualificação das A.docx  10-outubro-FORMAÇÃO DE RECURSOS HUMANOS NA ÁREA DE .docx  (+49 more)
membros/: forms.py  urls.py  views.py
pdf/: urls.py  views.py
website/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
(+243 files in other folders)
